# LearningOpenGL

./: CMakeLists.txt  main.cpp  run.sh
includes/: MyGraphics.h  Window.h
resources/shaders/: Basic.shader
src/: MyGraphics.cpp  Window.cpp
